  except all changed buffers are listed in one dialog box.

- Edit->Complete Word now completes words in all visible buffers (ie,
  showing in at least one edit pane). So as a poor man's CodeAid, you
  can open a text file listing Java classes and methods in a zero-height
  split.

- The plugin manager now has better handling of loading and unloading
  plugins with dependencies.

}}}
{{{ Bug Fixes

- Fixed problems with structure matching when soft wrap is on, if the
  structure spans more than one screen line (for example, this can
  happen with the tag matcher in the XML plugin).

- If 'Complete Word' was bound to TAB, pressing TAB would show the popup
  and immediately hide it.

- File drag and drop actually works now (so you should now remove the
  DragAndDrop plugin. Having it installed causes all dropped text to be
  copied, instead of moved.)

- Fixed a problem highlighting C preprocessor directives containing <.

- Batch mode didn't recognize @rem as a comment.

- The multiple results toggle in the HyperSearch results window was not
  being saved.

- International keys should once again work on JVMs that send AltGR
  sequences as Control+Alt (which is completely broken).

- Buffer.getPriorNonEmptyLine() did not access segments properly. This
  caused obscure problems with auto-indent.

- Fixed more problems with symbolic link handling in the file system
  browser.

- Fixed long-standing race condition in file system browser that could
  prevent a directory listing from being updated after a file was
  created, removed or renamed.

- Changes made in the Docking option pane only took effect after a
  restart.

- Fixed minor problem with digit handling in the Complete Word popup.

- Fixed problem with repeating user input in the action bar.

- Made it so that site properties are loaded just before user
  properties. This allows the look and feel to be changed via the site
  properties.

- Fixed a problem with Replace All over rectangular selections where