@@ -14,11 +14,9 @@ and quirks that I need to fix eventually.
 - nextLineRequested broken
 - no need to wait for requests after newFile()
 - C+` inserts ` again
-- control drag can leave cursor in odd place
 - plugin mgr install doesn't update existing plugins
 - macos international keys
 - test inserts with fold vis map
-- control drag doesn't kill existing selection
 - drag and drop: do a compound edit if same buffer
 - fix double slash in path bug
 - thread safety problem in VFSManager.waitForRequests()
